# Haruki-Toolbox-Backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  app.py  configs.example.py  docker-compose.yml  go.mod  go.sum  haruki-suite-configs.example.yaml  haruki-toolbox-configs.example.yaml  hypercorn.toml  main.go  pyproject.toml  utils.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build.yml  ci.yml  docker.yml  lint.yml  release.yml
Api/: inherit.py  mysekai.py  private_api.py  public_api.py  suite.py
Configs/: configs.py
Utils/: api_unpacker.py  clean_data.py  log_format.py  sekai_proxy.py
api/: debug.go  helper.go  public.py  route.go  upload.py  webhook.py
api/admin/: config.go  config_test.go  content.go  content_test.go  game_account_bindings.go  game_account_bindings_test.go  me_sessions.go  me_sessions_test.go  middleware.go  middleware_test.go  oauth_client_audit_logs.go  oauth_client_audit_logs_test.go  oauth_client_lifecycle.go  oauth_client_lifecycle_test.go  oauth_clients.go  oauth_clients_test.go  risk.go  risk_test.go  route.go  route_permissions_test.go  statistics.go  statistics_test.go  system_logs.go  system_logs_test.go  (+19 more)
config/: config.go  config_test.go  defaults.go  env.go  load.go  path.go  smtp_uri.go  types.go
data/: suite_structures.json  suite_user.avsc
docs/: admin-user-management.zh-CN.md  afdian-sponsor-integration.zh-CN.md  backend-refactor-and-suite-restore-plan.zh-CN.md  frontend-integration-notes.zh-CN.md  game-account-data-grants.zh-CN.md  haruki-bot-neo-registration.zh-CN.md  oauth2-client-integration.zh-CN.md  oauth2-confidential-client-integration.zh-CN.md  oauth2-webhook-integration.zh-CN.md  ory-suite-usage.zh-CN.md  ticket-experience-improvement-plan.zh-CN.md  ticket-experience-improvement-progress.zh-CN.md  webhook-integration.zh-CN.md
ent/: generate.go
entsrc/: generate.go
modules/: cache_helpers.py  enums.py  logger.py  mongo.py  schemas.py
mongo/: manager.go
utils/: enum.go  enum_test.go  model.go  nuverse.go  utils.go
version/: version.go
(+893 files in other folders)
