[project]
name = "Haruki-Suite-Backend"
version = "2.0.0"
description = "User data collection project"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.12",
    "cryptography>=45.0.4",
    "fastapi>=0.115.12",
    "fastapi-cache2>=0.2.2",
    "greenlet>=3.2.3",
    "hypercorn>=0.17.3",
    "msgpack>=1.1.0",
    "orjson>=3.10.18",
    "pyjwt>=2.10.1",
    "pymongo>=4.13.0",
    "redis>=6.2.0",
    "uvloop>=0.21.0",
]
