[project]
name = "Haruki-Suite-Backend"
version = "2.3.0"
description = "User data collection project"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.12",
    "coloredlogs>=15.0.1",
    "cryptography>=45.0.4",
    "fastapi>=0.115.12",
    "fastapi-cache2>=0.2.2",
    "greenlet>=3.2.3",
    "hypercorn>=0.17.3",
    "msgpack>=1.1.1",
    "orjson>=3.10.18",
    "pyjwt>=2.10.1",
    "pymongo>=4.13.1",
    "redis>=6.2.0",
    "ruff>=0.11.13",
    "uvloop>=0.21.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "W", # pycodestyle warnings
    "E", # pycodestyle errors
    "I", # isort
    "UP", # pyupgrade
    "ASYNC", # flake8-async
    "C4", # flake8-comprehensions
    "T10", # flake8-debugger
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "TID", # flake8-tidy-imports
    "RUF", # Ruff-specific rules
]
ignore = [
    "E402", # module-import-not-at-top-of-file
    "UP037", # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["nonebot", "tests/*"]
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
